--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,40 @@
-.wholeContainer{
+.wholeContainer {
     width: 800px;
-    height: 800px;
-    background-color: rgb(253, 192, 201);
-    /* display: table; margin: 0 auto; */
+    height: 900px;
+    background-color: rgb(250, 207, 213);
+    display: table;
+    margin: 0 auto;
+    border: 10px solid #dddddd;
+    margin-top: 50px;
+}
+
+#start {
+    display: table;
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.text{
+    margin-bottom: 200px;
+}
+
+#image-holder {
+    width: 500px;
+    height: 500px;
     margin: 0 auto;
 }
 
-#btn{
-    display: table; margin: 0 auto;
-    width:200px;
-    height: 50px;
-    font-size: 20px;
-
+img {
+    margin: 0 auto;
+    border: 10px solid #dddddd;
 }
-.header{
-    display: table; margin: 0 auto;
+
+.header {
+    display: table;
+    margin: 0 auto;
     font-family: 'Luckiest Guy';
     font-size: 30px;
 }
-
-/* 
-
-#wins-box {
-    width: 200px;
-    height: 50px;
-    /* background-color: rgb(145, 190, 228, .6); */
-    font-weight: bold;
-    padding-left: 20px;
-    font-family: 'Righteous', cursive;
-    color: white;
-    font-size: 25px;
-  }
-
-  #too {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    color: #ffffff;
-    float:left;
-    width: 320px;
-    height: 100px;
-    background-color: #4aaaa5;
-    text-align: center;
-    line-height: 100px;
-  position: relative;
-   */
- 
