--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,54 @@
+.header {
+    display: table;
+    margin: 0 auto;
+    font-family: 'Luckiest Guy';
+    font-size: 40px;
+    letter-spacing: 4px;
+    
+}
+
 .wholeContainer {
     width: 800px;
     height: 900px;
     background-color: rgb(250, 207, 213);
     display: table;
     margin: 0 auto;
-    border: 10px solid #dddddd;
-    margin-top: 50px;
+    border: 10px solid white;
+    margin-top: 30px;
+    border-radius: 15px;
 }
+
 
 #start {
     display: table;
     margin: 0 auto;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
+    width: 500px;
+    height: 200px;
+    font-size: 70px;
     text-align: center;
-}
-
-.text{
-    margin-bottom: 200px;
-    text-align: center;
-    font-size: 20px;
+    color: rgb(255, 249, 193);
+    margin-top: 60px;
+    margin-bottom: 0;
+    background-color:rgb(127, 217, 233);
+    border-radius: 15px;
+    border: 10px solid white;
     
 }
 
-#image-holder {
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
+.text{
+    margin-bottom: 250px;
+    text-align: center;
+    font-size: 20px;
 }
+
+ #image-holder {
+    width: 500px;
+    height: 300px;
+    margin: 0 auto;
+} 
 
 img {
     margin: 0 auto;
-    border: 10px solid #dddddd;
-}
-
-.header {
-    display: table;
-    margin: 0 auto;
-    font-family: 'Luckiest Guy';
-    font-size: 30px;
+    border: 10px solid white;
+    border-radius: 15px;
 }
