--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,13 @@ img {
     border: 10px solid white;
     border-radius: 15px;
 }
+
+#showPossibleAnswers:hover { 
+    background-color: yellow;
+  }
+
+  .finalScreen{
+    font-family: 'Luckiest Guy';
+    text-align: center;
+    font-size: 40px;
+  }
