--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@
     border-radius: 15px;
 }
 
+.clearfix {
+    overflow: auto;
+  }
 
 #start {
     display: table;
@@ -37,7 +40,13 @@
 .text{
     margin-bottom: 250px;
     text-align: center;
-    font-size: 20px;
+    font-size: 19px;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1.5px;
+}
+
+#showAnswer{
+    font-weight:bold !important;
 }
 
  #image-holder {
@@ -63,14 +72,14 @@ img {
   }
 
   .choice:hover{
-    width: 200px;
+    width: 250px;
     height: 50px;
-    background-color:red;
+    background-color:rgb(226, 119, 240);
   }
 
   .choice{
     display:block;
-    width: 200px;
+    width: 250px;
     height: 50px;
     margin: 0 auto; 
     font-size: 20px; 
