--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 
 .clearfix {
     overflow: auto;
-  }
+}
 
 #start {
     display: table;
@@ -31,29 +31,28 @@
     color: rgb(255, 249, 193);
     margin-top: 60px;
     margin-bottom: 0;
-    background-color:rgb(127, 217, 233);
+    background-color: rgb(127, 217, 233);
     border-radius: 15px;
     border: 10px solid white;
-    
 }
 
-.text{
-    margin-bottom: 250px;
+.text {
+    margin-bottom: 20px;
     text-align: center;
     font-size: 19px;
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 1.5px;
 }
 
-#showAnswer{
-    font-weight:bold !important;
+#showAnswer {
+    font-weight: bold !important;
 }
 
- #image-holder {
+#image-holder {
     width: 500px;
     height: 300px;
     margin: 0 auto;
-} 
+}
 
 img {
     margin: 0 auto;
@@ -61,26 +60,32 @@ img {
     border-radius: 15px;
 }
 
-  .finalScreen{
+#final-screen-text {
     font-family: 'Luckiest Guy';
     text-align: center;
     font-size: 40px;
-  }
+}
 
-  #showAnswer{
-      font-weight:bold
-  }
+#correct, #incorrect, #unanswered, #button2 {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+}
 
-  .choice:hover{
+#showAnswer {
+    font-weight: bold
+}
+
+.choice:hover {
     width: 250px;
     height: 50px;
-    background-color:rgb(226, 119, 240);
-  }
+    background-color: rgb(226, 119, 240);
+}
 
-  .choice{
-    display:block;
+.choice {
+    display: block;
     width: 250px;
     height: 50px;
-    margin: 0 auto; 
-    font-size: 20px; 
-  }
+    margin: 0 auto;
+    font-size: 20px;
+}
